# stock-analyzer

./: .env.example  .gitignore  README.md  analyze_stock.ipynb  app.py  dcf.ipynb  pyproject.toml  transcript_summary.ipynb  transcripts.ipynb
static/: styles.css
static/js/: dcf.js  metrics.js  transcripts.js
stock_analyzer/: __init__.py  config.py  data_access.py  notebooks.py  web.py
stock_analyzer/frontend/static/: styles.css
stock_analyzer/frontend/static/js/: app.js  dcf.js  metrics.js  tabs.js  transcripts.js
stock_analyzer/frontend/templates/: base.html  index.html  result.html
stock_analyzer/frontend/templates/partials/: _dcf.html  _metrics.html  _tabs.html  _transcripts.html
templates/: base.html  index.html  result.html
templates/partials/: _dcf.html  _metrics.html  _transcripts.html
