[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "langchain-anthropic>=0.3.20",
    "pandas>=2.3.2",
    "papermill>=2.6.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
